--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,9 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <!-- nicepay API 불러오기 -->
+    <script src="https://pay.nicepay.co.kr/v1/js/"></script>
+
     <title>React App</title>
   </head>
   <body>
