--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,9 @@
     <!-- nicepay API 불러오기 -->
     <script src="https://pay.nicepay.co.kr/v1/js/"></script>
 
+    <script src="https://www.gstatic.com/firebasejs/10.8.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/10.8.0/firebase-messaging.js"></script>
+
     <title>React App</title>
   </head>
   <body>
