--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
     <script src="https://www.gstatic.com/firebasejs/10.8.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/10.8.0/firebase-messaging.js"></script>
 
-    <title>React App</title>
+    <title>레드스위치</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
