🛠️ Fix : AD 모바일 뷰 안뜨는 에러 수정

--- a/public/index.html
+++ b/public/index.html
@@ -27,8 +27,8 @@
     <!-- nicepay API 불러오기 -->
     <script src="https://pay.nicepay.co.kr/v1/js/"></script>
 
-    <script src="https://www.gstatic.com/firebasejs/10.8.0/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/10.8.0/firebase-messaging.js"></script>
+    <!-- <script src="https://www.gstatic.com/firebasejs/10.8.0/firebase-app.js"></script> -->
+    <!-- <script src="https://www.gstatic.com/firebasejs/10.8.0/firebase-messaging.js"></script> -->
 
     <title>레드스위치</title>
   </head>
