--- a/public/index.html
+++ b/public/index.html
@@ -8,11 +8,21 @@
     <meta name="description" content="태그로 쉽게 주문 레드스위치" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 
-    <meta property="og:url" content="https://redswitch.kr/" />
+    <!-- <meta property="og:url" content="https://redswitch.kr/" />
     <meta property="og:title" content="레드스위치" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="%PUBLIC_URL%/logo192.png" />
-    <meta property="og:description" content="태그로 쉽게 주문 레드스위치" />
+    <meta property="og:description" content="태그로 쉽게 주문 레드스위치" /> -->
+
+    <meta property="og:url" content="https://redswitch.kr/bdsm" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" id="ogtitle" content="BDSM 테스트" />
+    <meta
+      property="og:description"
+      id="ogdesc"
+      content="너 SEX MBTI 뭐야? 나의 성적 성향을 알아보세요."
+    />
+    <meta property="og:image" id="ogimg" content="%PUBLIC_URL%/bdsm.png" />
 
     <!--
       manifest.json provides metadata used when your web app is installed on a
