--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,21 @@
     <meta name="theme-color" content="#000000" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 
+    <meta
+      name="naver-site-verification"
+      content="04a3825a82d47cf7243dc8cdf87b8b71eab41bc2"
+    />
+    <meta
+      name="description"
+      content="레드스위치 | 숙박업소 비대면 어덜트토이 플랫폼. 가장 필요한 순간 간편주문. 즉시 도착"
+    />
+
+    <meta property="og:title" content="레드스위치" />
+    <meta
+      property="og:description"
+      content="레드스위치 | 숙박업소 비대면 어덜트토이 플랫폼. 가장 필요한 순간 간편주문. 즉시 도착"
+    />
+
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
